--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <style>
         body {
             font-family: system-ui, sans-serif; margin: 2rem;
+            background-color: bisque;
         }
         #out{
             white-space: pre-wrap; border: 1px solid #f3a0a0; padding: 1rem; border-radius: .5rem;
-        }
-        pre{
-            color:black;
         }
     </style>
 </head>
